chore: use git info for last updated

--- a/config.toml
+++ b/config.toml
@@ -50,3 +50,6 @@ block = true
 endLevel   = 6
 ordered    = false
 startLevel = 2
+
+[frontmatter]
+lastmod = [ "lastmod", ":git", "date", "publishDate" ]
