chore: use git info

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # Change the default theme to be use when building the site with Hugo
 theme = "hugo-theme-learn"
+enableGitInfo = true
 
 # For search functionality
 [outputs]
